# libhaptic_wrist

./: .gitignore  CMakeLists.txt  README.md  haptic_wristConfig.cmake.in
config/: gravity_cal.yaml  haptic_wrist.yaml
include/haptic_wrist/: gravity_comp.h  haptic_wrist.h  kinematics.h  trapezoidal_velocity_profile.h  types.h
programs/: CMakeLists.txt  demo_grav_comp.cpp  gravity_cal.cpp  test_wrist.cpp  tool_frame_cb.h
src/: CMakeLists.txt  gravity_comp.cpp  haptic_wrist.cpp  haptic_wrist_impl.cpp  haptic_wrist_impl.h  kinematics.cpp  main.cpp  trapezoidal_velocity_profile.cpp  utils.cpp  utils.h
